fixing layout issue on agent listing

--- a/sass/planets/wp/_wp_defaults.scss
+++ b/sass/planets/wp/_wp_defaults.scss
@@ -60,11 +60,11 @@ img.alignleft {
 	    line-height: 17px;
 	}
 	&.alignright {
-    width: 50% !important;
+    width: 75% !important;
     margin: 5px 0 20px 20px;
 	}
 	&.alignleft {
-    width: 50% !important;
+    width: 75% !important;
     margin: 5px 20px 20px 0;
 	}
 	&.alignnone,
@@ -72,6 +72,12 @@ img.alignleft {
 	    margin: 5px 20px 20px 0;
       width: 100% !important;
 	}
+  @include bp($galaxy) {
+    &.alignright,
+    &.alignleft {
+      width: 50% !important;
+    }
+  }
   @include bp($solarsystem) {
     &.alignright,
     &.alignleft {
