--- a/sass/stars/zemplate/_variables.scss
+++ b/sass/stars/zemplate/_variables.scss
@@ -45,7 +45,7 @@ $planetary:     520px;
 /*------------------------------------*\
     ::Layout
 \*------------------------------------*/
-$max-width:      1230px;
+$max-width:      1430px;
 $pad:           0.9375rem;
 $gap:           $pad;
 $gap--baby:     $pad*2;
